--- a/Image_Classification.ipynb
+++ b/Image_Classification.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxK1qi2IcPSzpW6i30VksL",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMeYtHY5oqzfg0rqNKDz1J7"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ballicon/gen_ai/blob/main/Image_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [],
       "metadata": {
         "id": "-FfmLOaK_yLn"
@@ -37,7 +26,7 @@
       "cell_type": "markdown",
       "source": [
         "# Numpy : Number Based Operations\n",
-        "Tensorflow : Widely used for ML Model"
+        "# Tensorflow : Widely used for ML Model"
       ],
       "metadata": {
         "id": "d9ZprZSC-S1A"
@@ -83,7 +72,7 @@
         "    layers.Flatten(),\n",
         "    layers.Dense(64, activation='relu'),\n",
         "    layers.Dense(10)\n",
-        "])"
+        "])\n"
       ],
       "metadata": {
         "id": "ngpRKX0a-8Bg"
